# zenlibc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  zenlibc.c  zl_type_hash.c  zl_type_list.c  zl_type_string.c
src/include/: zenlibc.h  zl_type_hash.h  zl_type_list.h  zl_type_string.h
test/: CMakeLists.txt  test_main.cpp
test/tests/: zl_type_hash_tests.cpp  zl_type_list_tests.cpp
zenlibc/: CMakeLists.txt  zenlibc.cpp  zenlibc.h
